fix scrollbar user

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,10 +7,10 @@
 @layer base {
   html {
     font-family: "Urbanist", sans-serif;
+    scrollbar-width: none;
   }
 }
 
-@layer utilities {
   /* Hide scrollbar but keep functionality */
   .hide-scrollbar {
     /* For Webkit browsers (Chrome, Safari, Edge) */
@@ -57,7 +57,7 @@
     background: #94a3b8;
     border-radius: 4px;
   }
-}
+
 
 a {
   font-weight: 500;
